Fix asn1 load certificate giving error

--- a/tests/asn1/Makefile
+++ b/tests/asn1/Makefile
@@ -1,8 +1,8 @@
-SRC=../../src
-BIN=../../bin
+SRC=../../src/tls/crypto
+BIN=../../bin/src/tls/crypto
 
 build: project
-	gcc -o asn1_test asn1_test.c -I../../include -I$(SRC) $(BIN)/src/hobig.o $(BIN)/src/random.o $(BIN)/src/arith.o $(BIN)/src/asn1.o 
+	gcc -g -o asn1_test asn1_test.c -I../../include -I$(SRC) $(BIN)/hobig.o $(BIN)/random.o $(BIN)/arith.o $(BIN)/asn1.o 
 
 run:
 	@./asn1_test
