Remove leaks from hobig and added tests for that

--- a/tests/hobig/Makefile
+++ b/tests/hobig/Makefile
@@ -2,7 +2,7 @@ SRC=../../src/tls/crypto
 BIN=../../bin/src/tls/crypto
 
 build: project
-	gcc -g -o hobig_test hobig_test.c -I../../include -I$(SRC) $(BIN)/hobig.o $(BIN)/random.o $(BIN)/arith.o
+	gcc -DDEBUG_MEMORY -g -o hobig_test hobig_test.c ../../src/tls/crypto/hobig.c -I../../include -I$(SRC) $(BIN)/random.o $(BIN)/arith.o
 
 run:
 	@./hobig_test
